# egui-lucide

./: .gitmodules  Cargo.toml
crates/build-lucide-collect/: Cargo.toml
crates/build-lucide-collect/src/: lib.rs
crates/egui-lucide/: Cargo.toml  build.rs  lucide
crates/egui-lucide/examples/: icon_list.rs
crates/egui-lucide/src/: lib.rs
crates/lucide-rs/: Cargo.toml  build.rs
crates/lucide-rs/examples/: usage.rs
crates/lucide-rs/src/: lib.rs
