[package]
name = "lucide-rs"
version = "0.338.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
convert_case = "0.6.0"
quick-xml = "0.31.0"
build-lucide-collect.workspace = true